# solid-octo-engine

./: .gitignore  Cakefile  config.default.coffee  package.json
docs/: index.html  index.js
electric/: main.js
pwa/: icon.pug  sw.coffee
soe/: Cargo.toml
soe/src/: lib.rs  menu.rs  store.rs
web/: index.coffee  index.pug  logo.pug  style.sass
