[package]
name = "soe"
version = "0.1.0"
edition = "2021"
description = "Jeu de Simon"
repository = "https://github.com/othelarian/solid-octo-engine"
authors = ["othelarian <le.maitre.killian@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[profile.release]
panic = "abort"
codegen-units = 1
opt-level = "z"
lto = true

[dependencies]
#gloo-utils = "0.1.5"
wasm-bindgen = "0.2.80"
#yew = "0.19.3"
#yew-agent = "0.1.0"

[dependencies.bevy]
version = "0.9.1"
default-features = false
features = ["bevy_asset", "bevy_core_pipeline", "bevy_render", "bevy_sprite", "bevy_winit"]

[dependencies.web-sys]
version = "0.3.57"
features = ["Element"]

